# carparazzi

./: .cursorruls  .env.example  .envrc.example  .tool-versions  README.md
docs/: API.20250701.STEP1.md  ERD.20250701.STEP1.md  ERD.20250701_step1_detect_accident.md  PRD.20250701_step1_detect_accident.md
docs/prd/: 20250701_step1_detect_accident.md
factory/: Makefile  pyproject.toml
infra/terraform/init/: README.md  conf.tf  import-state.sh  main.tf  terraform.tfstate  terraform.tfstate.backup
infra/terraform/main/modules/iam_role/: main.tf  out.tf  var.tf
infra/terraform/main/prod/projects/application/: 00_ecr.tf  01_task_role.tf  02_task_definition.tf  03_ecs_service.tf  04_autoscaling.tf  conf.tf  data.tf  main.tf
infra/terraform/main/prod/resources/service_ecs/: conf.tf  main.tf  out.tf
infra/terraform/main/prod/resources/service_lb/: conf.tf  data.tf  main.tf  out.tf
server/kotlin/: .editorconfig  Makefile  README.md  build.gradle.kts  compose.yaml  settings.gradle.kts
server/kotlin/apps/service_api/: README.md  build.gradle.kts
server/kotlin/apps/service_api/src/main/kotlin/org/drakejin/carparazzi/: ServiceApiApplication.kt
server/kotlin/apps/service_api/src/main/resources/: application.properties
server/kotlin/apps/service_api/src/test/kotlin/org/drakejin/buttons/: CarparazziServiceAPIApplicationTests.kt
server/kotlin/domains/: build.gradle.kts
server/kotlin/entity/: build.gradle.kts
server/kotlin/entity/src/main/resources/: schema.sql
server/kotlin/entity/src/test/kotlin/org/drakejin/carparazzi/entity/: UserTest.kt
(+26 files in other folders)
