[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "factory"
version = "0.1.0"
description = "Factory projects collection"
requires-python = ">=3.13"
dependencies = []

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.pyright]
pythonVersion = "3.13"
include = ["projects"]
typeCheckingMode = "strict"
